Adds simple XML output form identify verb

--- a/flask_oaiserver/templates/oaiserver/config/index.html
+++ b/flask_oaiserver/templates/oaiserver/config/index.html
@@ -1,4 +1,4 @@
-{% extends "oaiserver/base.html" %}
+{% extends "oaiserver/config/base.html" %}
 
 {% block body %}
 <h1>OAI-PMH server cofiguration</h1>
