Moves settings for OAI-PMH to separete blueprint

--- a/flask_oaiserver/templates/oaiserver/settings/index.html
+++ b/flask_oaiserver/templates/oaiserver/settings/index.html
@@ -1,4 +1,4 @@
-{% extends "oaiserver/config/base.html" %}
+{% extends "oaiserver/settings/base.html" %}
 
 {% block body %}
 <h1>OAI-PMH server cofiguration</h1>
